<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>appng-scheduler</artifactId>
	<version>2.0.0-SNAPSHOT</version>
	<name>Scheduler</name>
	<description>Scheduling using Quartz Scheduler</description>
	<url>https://www.appng.org</url>

	<parent>
		<groupId>org.appng</groupId>
		<artifactId>appng-application-parent</artifactId>
		<version>2.0.0-SNAPSHOT</version>
		<relativePath />
	</parent>

	<properties>
		<appNG.version>${project.parent.version}</appNG.version>
		<projectId>SCHED</projectId>
		<hsqlPort>9001</hsqlPort>
		<urlAlias>scheduler</urlAlias>
		<displayName>Scheduler</displayName>
		<longDescription><![CDATA[An application for scheduling using Quartz]]></longDescription>
		<application.homeFolder>application-home</application.homeFolder>
	</properties>

	<scm>
		<connection>scm:git:ssh://git@github.com:appNG/appng-scheduler.git</connection>
		<developerConnection>scm:git:ssh://git@github.com:appNG/appng-scheduler.git</developerConnection>
		<url>https://github.com/appNG/appng-scheduler</url>
	</scm>
	<licenses>
		<license>
			<name>Apache 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>A business-friendly OSS license</comments>
		</license>
	</licenses>

	<issueManagement>
		<system>JIRA</system>
		<url>https://appng.org/jira/projects/SCHED/</url>
	</issueManagement>
	<developers>
		<developer>
			<id>mherlitzius</id>
			<name>Matthias Herlitzius</name>
			<email>matthias.herlitzius at appng.org</email>
			<organization>aiticon GmbH</organization>
			<organizationUrl>http://www.aiticon.com</organizationUrl>
		</developer>
		<developer>
			<id>madness-inc</id>
			<name>Matthias Müller</name>
			<email>matthias.mueller at appng.org</email>
			<organization>aiticon GmbH</organization>
			<organizationUrl>http://www.aiticon.com</organizationUrl>
		</developer>
		<developer>
			<id>stuemke</id>
			<name>Claus Stümke</name>
			<email>claus.stuemke at appng.org</email>
			<organization>aiticon GmbH</organization>
			<organizationUrl>http://www.aiticon.com</organizationUrl>
		</developer>
	</developers>


	<profiles>
		<profile>
			<id>maven-central</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.0.1</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>1.6.7</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>sonatype</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>false</autoReleaseAfterClose>
						</configuration>
					</plugin>
				</plugins>
			</build>
			<distributionManagement>
				<repository>
					<id>sonatype</id>
					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
				</repository>
			</distributionManagement>
		</profile>
		<profile>
			<id>swagger-ui</id>
			<activation>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-dependency-plugin</artifactId>
						<version>3.1.2</version>
						<executions>
							<execution>
								<id>unpack</id>
								<phase>initialize</phase>
								<goals>
									<goal>unpack</goal>
								</goals>
								<configuration>
									<artifactItems>
										<artifactItem>
											<groupId>org.webjars</groupId>
											<artifactId>swagger-ui</artifactId>
											<version>4.10.3</version>
											<type>jar</type>
											<overWrite>true</overWrite>
											<includes>**/*.js,**/*.css,**/*.png</includes>
											<outputDirectory>${project.basedir}/application-home/resources/swagger-ui/</outputDirectory>
											<fileMappers>
												<fileMapper implementation="org.codehaus.plexus.components.io.filemappers.FlattenFileMapper" />
											</fileMappers>
										</artifactItem>
									</artifactItems>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
				<filtering>true</filtering>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<release>21</release>
				</configuration>
			</plugin>
			<!-- expose the mockito-core jar path so it can be loaded as a java agent (avoids Mockito self-attaching on JDK 21+) -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.2</version>
				<executions>
					<execution>
						<id>get-mockito-agent</id>
						<goals>
							<goal>properties</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>-javaagent:${org.mockito:mockito-core:jar}</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.openapitools</groupId>
				<artifactId>openapi-generator-maven-plugin</artifactId>
				<version>6.6.0</version>
				<executions>
					<execution>
						<id>rest-api</id>
						<goals>
							<goal>generate</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<inputSpec>${basedir}/src/main/resources/scheduler-api.yaml</inputSpec>
					<!-- templateDirectory>${project.basedir}/openapi</templateDirectory -->
					<generatorName>spring</generatorName>
					<library>spring-boot</library>
					<generateSupportingFiles>true</generateSupportingFiles>
					<generateModels>true</generateModels>
					<generateApis>true</generateApis>
					<!-- https://github.com/OpenAPITools/openapi-generator/blob/v5.3.1/docs/generators/spring.md -->
					<configOptions>
						<interfaceOnly>true</interfaceOnly>
						<apiPackage>org.appng.scheduler.openapi</apiPackage>
						<invokerPackage>org.appng.scheduler.openapi.invoke</invokerPackage>
						<modelPackage>org.appng.scheduler.openapi.model</modelPackage>
						<useTags>true</useTags>
						<useSpringBoot3>true</useSpringBoot3>
						<documentationProvider>none</documentationProvider>
						<annotationLibrary>none</annotationLibrary>
						<skipDefaultInterface>true</skipDefaultInterface>
						<containerDefaultToNull>true</containerDefaultToNull>
						<dateLibrary>java8</dateLibrary>
					</configOptions>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<sources>
						<source>target/generated-sources/constants</source>
						<source>target/generated-sources/openapi/src/main/java</source>
					</sources>
				</configuration>
				<executions>
					<execution>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
					</execution>
				</executions>

			</plugin>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<id>generate-docs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<phase>package</phase>
					</execution>
				</executions>
				<configuration>
					<additionalparam>-Xdoclint:all,-Xdoclint:-html</additionalparam>
					<sourcepath>src/main/java:target/generated-sources/constants</sourcepath>
					<sourcepath>target/generated-sources/openapi/src/main/java</sourcepath>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
						<phase>verify</phase>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.appng</groupId>
				<artifactId>appng-maven-plugin</artifactId>
				<version>${appNG.version}</version>
				<executions>
					<execution>
						<id>applicationConstants</id>
						<goals>
							<goal>generateApplicationConstants</goal>
						</goals>
						<phase>generate-sources</phase>
						<configuration>
							<filePath>${application.homeFolder}/application.xml</filePath>
							<targetClass>org.appng.application.scheduler.PropertyConstants</targetClass>
							<outfolder>${application.constants.generatedOutputFolder}</outfolder>
						</configuration>
					</execution>
					<execution>
						<id>messageConstants</id>
						<goals>
							<goal>generateMessageConstants</goal>
						</goals>
						<configuration>
							<filePath>${application.homeFolder}/dictionary/messages-scheduler.properties</filePath>
							<targetClass>org.appng.application.scheduler.MessageConstants</targetClass>
							<outfolder>${application.constants.generatedOutputFolder}</outfolder>
						</configuration>
					</execution>
				</executions>
				<dependencies>
					<!-- application xsd may change. use project version -->
					<dependency>
						<groupId>org.appng</groupId>
						<artifactId>appng-xmlapi</artifactId>
						<version>${appNG.version}</version>
					</dependency>
					<dependency>
						<groupId>jakarta.activation</groupId>
						<artifactId>jakarta.activation-api</artifactId>
						<version>1.2.2</version>
					</dependency>
					<dependency>
						<groupId>javax.xml.bind</groupId>
						<artifactId>jaxb-api</artifactId>
						<version>2.3.1</version>
					</dependency>
					<dependency>
						<groupId>commons-io</groupId>
						<artifactId>commons-io</artifactId>
						<version>2.6</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.appng</groupId>
			<artifactId>appng-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.appng</groupId>
			<artifactId>appng-testsupport</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<version>9.3.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>
		<dependency>
			<groupId>org.openapitools</groupId>
			<artifactId>jackson-databind-nullable</artifactId>
			<version>0.2.6</version>
		</dependency>
		<!-- override the stale jakarta.annotation-api 1.3.5 (javax.annotation package) managed by the bom;
		     the openapi-generated sources reference jakarta.annotation.Generated -->
		<dependency>
			<groupId>jakarta.annotation</groupId>
			<artifactId>jakarta.annotation-api</artifactId>
			<version>3.0.0</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.appng</groupId>
				<artifactId>appng-application-bom</artifactId>
				<type>pom</type>
				<scope>import</scope>
				<version>${appNG.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

</project>
